--- a/views/layout.html
+++ b/views/layout.html
@@ -60,7 +60,7 @@
 </nav>
 
 
-    <body style="background-color: #f0f0f0;">
+    <body style="background-color: #e2e2e2;">
         {{include}}
     </body>
 </html>
