--- a/views/default/create.html
+++ b/views/default/create.html
@@ -12,9 +12,8 @@
 <script src="{{=URL('static', 'js/vue.js')}}"></script>
 
 <script>
-    var create_job_url = "{{=URL('api', 'create_job', user_signature=True)}}";
-    var community_url = "{{=URL('default', 'community')}}";
-    var home_url = "{{=URL('default', 'community')}}";
+    var create_job_url = "{{=URL('api', 'create_job', user_signature=True)}}";    
+    var default_url = "{{=URL('default', 'index')}}";
     
     function isJobModel(event) {
         var charCode = event.which;
@@ -80,13 +79,21 @@
                     </div>
                     
                     <div class="form-group">
-                        <label for="job_weapons">Weapons</label>
-                        <br/>
-                        <tag-it id='weaponTags' name='tags' placeholder='Add weapon classes' value=''></tag-it>
-                        <!-- Hidden input -->
-                        <input v-model="job_weapons" id="job_weapons" placeholder="Add weapon classes" value="" type="hidden"/>
-                        <div v-if="job_weapons_error" class="formError">${ job_weapons_error }</div>
+                        <label for="job_custom_model">Workshop ID for Custom Model</label>
+                        
+                        <input id="job_custom_model" class="form-control" placeholder="Steam Workshop URL or Workshop ID" maxlength=200 v-model="job_workshop"/>
+                        <div v-if="job_workshop_error" class="formError">${ job_workshop_error }</div>
+                        
+                        <label for="job_suggested_model" style="margin-top: 10px;">Suggested Model (For model packs)</label>
+                        
+                        <input id="job_suggested_model" class="form-control" placeholder="Deadpool" maxlength=200 v-model="job_suggested_model" v-on:keypress="isJobDescription"/>
+                        <div v-if="job_suggested_model_error" class="formError">${ job_suggested_model_error }</div>
+                        
+                        <div style="margin-top: 5px;">
+                            <a href="https://steamcommunity.com/workshop/browse/?appid=4000&searchtext=&childpublishedfileid=0&browsesort=trend&section=readytouseitems&requiredtags%5B%5D=Model" target="_blank">Browse the Steam Workshop</a>
+                        </div>
                     </div>
+                    
                 </div>
                 
                 <div class="col-md-6 col-sm-6" style="margin-top: 10px; margin-bottom: 10px;">                    
@@ -133,6 +140,15 @@
                     </div>
                     
                     <div class="form-group">
+                        <label for="job_weapons">Weapons</label>
+                        <br/>
+                        <tag-it id='weaponTags' name='tags' placeholder='Add weapon classes' value=''></tag-it>
+                        <!-- Hidden input -->
+                        <input v-model="job_weapons" id="job_weapons" placeholder="Add weapon classes" value="" type="hidden"/>
+                        <div v-if="job_weapons_error" class="formError">${ job_weapons_error }</div>
+                    </div>
+                    
+                    <div class="form-group">
                         <label>Miscellaneous</label>
                         <br/>
                        
@@ -155,7 +171,7 @@
 
     <div class="container" style="margin-top: 5px; padding-right: 0px; padding-left: 0px;">
         <div>
-            <div style="margin-bottom: 0px; text-align: right;">
+            <div style="margin-bottom: 10px; text-align: right;">
                 <input id="submit_share_button" class="submitButton" v-on:click="submit_share" type="button" value="Share" style="display: inline-block;"/>
                 <input id ="submit_button" v-on:click="submit(false)" class="submitButton" type="button" value="Create" style="display: inline-block;"/>
             </div>
@@ -163,7 +179,7 @@
     </div>
 
     <div class="container" style="">
-        <div style="margin-left: 15%; margin-right: 15%; background: white;">
+        <div style="margin-left: 15%; margin-right: 15%; margin-bottom: 34px; background: white;">
             
             <div style="background-color: rgba(32, 32, 32);">
                 <h5 style="color: white; margin-bottom: 0px; padding: 20px;"><b>Generated</b> code</h5>
